--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -12,8 +12,10 @@
     "footer_moderation": "Moderations / Complaints",
     "footer_about": "About",
     "footer_contact": "Contact",
-    "footer_email": "support@psyanon.org",
-    "footer_telegram": "@psyanon",
+    "footer_email": "psyanon.org@gmail.com",
+    "footer_telegram": "@Sumaiichik",
+    "footer_tiktok": "psyanon_org",
+    "footer_instagram": "psyanon_org",
     "footer_copyright": "© 2025 PsyAnon. All rights reserved.",
     "footer_admin_login": "Admin Login",
 
@@ -21,7 +23,7 @@
     "welcome_subtitle": "We created this platform so everyone can be heard, even while remaining anonymous.",
     "welcome_get_started": "Get Started",
     "welcome_about_title": "About the project",
-    "welcome_about_text": "I decided to establish the PsyAnon platform to assist others. In the future. I aspire to be a psychologist, and this platform is my first step towards that aim. By establishing this place today, I can begin providing emotional support, creating a safe environment, and listening to those who need to be heard.",
+    "welcome_about_text": "I decided to establish the PsyAnon platform to assist others. In the future, I pursue to be a psychologist, and this platform is my first step towards that aim.",
     "welcome_feature_share": "Share your story",
     "welcome_feature_read": "Read others stories",
     "welcome_feature_moderation": "Moderations / Complaints",
