--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -12,8 +12,10 @@
     "footer_moderation": "Модерация / Жалобы",
     "footer_about": "О нас",
     "footer_contact": "Контакты",
-    "footer_email": "support@psyanon.org",
-    "footer_telegram": "@psyanon",
+    "footer_email": "psyanon.org@gmail.com",
+    "footer_telegram": "@Sumaiichik",
+    "footer_tiktok": "psyanon_org",
+    "footer_instagram": "psyanon_org",
     "footer_copyright": "© 2025 PsyAnon. Все права защищены.",
     "footer_admin_login": "Вход для администратора",
 
